// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unstructured Data Table Tests Should render correctly for correct input 1`] = `
<table
  className="ui striped table"
>
  <thead
    className=""
  >
    <tr
      className=""
    >
      <th
        className=""
      >
        Published
      </th>
      <th
        className=""
      >
        Author
      </th>
      <th
        className=""
      >
        Title
      </th>
    </tr>
  </thead>
  <tbody
    className=""
  >
    <tr
      className=""
      onClick={[Function]}
    >
      <td
        className=""
      >
        5/9/2019
      </td>
      <td
        className=""
      >
        some author
      </td>
      <td
        className=""
      >
        some title
      </td>
    </tr>
    <tr
      className=""
      onClick={[Function]}
    >
      <td
        className=""
      >
        5/9/2019
      </td>
      <td
        className=""
      >
        some author
      </td>
      <td
        className=""
      >
        some title r...
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Unstructured Data Table Tests Should render correctly for correct input with onSelect handler 1`] = `
<table
  className="ui selectable striped table"
>
  <thead
    className=""
  >
    <tr
      className=""
    >
      <th
        className=""
      >
        Published
      </th>
      <th
        className=""
      >
        Author
      </th>
      <th
        className=""
      >
        Title
      </th>
    </tr>
  </thead>
  <tbody
    className=""
  >
    <tr
      className=""
      onClick={[Function]}
    >
      <td
        className=""
      >
        5/9/2019
      </td>
      <td
        className=""
      >
        some author
      </td>
      <td
        className=""
      >
        some title
      </td>
    </tr>
    <tr
      className=""
      onClick={[Function]}
    >
      <td
        className=""
      >
        5/9/2019
      </td>
      <td
        className=""
      >
        some author
      </td>
      <td
        className=""
      >
        some title r...
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Unstructured Data Table Tests Should render correctly with selected row 1`] = `ShallowWrapper {}`;
